# osworld-installer

./: .gitignore  AGENTS.md  CODESIGN.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  TROUBLESHOOTING.md  auto-test.ps1  index.html  package-lock.json  package.json  status.md  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.kimi/: ARCH_LAPTOP_PROMPT.md  REMOTE_SETUP.md  STATUS.md
archiso-profile/: packages.x86_64  profiledef.sh
scripts/: README.md
scripts/first-boot/: altos-monitor.service  altos-monitor.sh  wizard.qss  wizard.sh  wizard_gui.py
scripts/installer/: example-config.json  install.sh  live-bridge.sh
scripts/recovery/: diagnose.sh  recovery.sh  reinstall-bootloader.sh  restore-snapshot.sh  windows-rescue.sh
scripts/uninstaller/: uninstall.sh  windows-uninstall.ps1
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: DiskSelectionWindow.test.tsx  DiskSelectionWindow.tsx  EditionSelectionWindow.tsx  InstallationProgressWindow.tsx  PostInstallOverlay.tsx  SystemCheckWindow.test.tsx  SystemCheckWindow.tsx  UninstallerWindow.tsx  UserSetupWindow.tsx  WelcomeWindow.tsx
src/lib/: tauri.test.ts  tauri.ts
src/test/: setup.ts
tools/: agent-loop.sh  apply-fix.sh  detect-error.sh  run-test.sh  test-orchestrator.sh
vm-test/: prepare-disk.sh  run-direct-boot.sh  run-direct-install-uefi-reboot.sh  run-e2e-test.sh  run-phase2-reboot-only.sh  run-reboot-test.sh  run-test.sh  run-uefi-test.sh  spam-e2e.sh
website/: index.html
(+44 files in other folders)
