[package]
name = "osworld-installer"
version = "0.1.0"
description = "OSWorld Linux Distribution Installer"
authors = ["OSWorld Team"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-os = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-beta"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Registry", "Win32_Storage_FileSystem", "Win32_Foundation"] }
wmi = "0.14"
